Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp-container
        image: nginx:latest
        resources: 
          limits: 
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
#  strategy: 
#    type: RollingUpdate
#    rollingUpdate:
#       maxSurge: 1
#       maxUnavailable: 1
